    - Added reinforced structures for military.
    - Reinforced red belt / blue belt (3x health),
    - Reinforced fast inserters (3x),
    - Reinforced pipes (5x)
    - Reinforced medium pole (5x)
    - Reinforced requester chests (2x)
    - Reinforced laser turret (1.5x)
    - Reinforced gun turret (1.5x)
    - Reinforced flamethrower (1.5x)
    - Resistance 33% to all, 99% to fire

  Changes:
    - research_queue_setting set to "always" for Roach World map Presents
    - Max number of group and max group size are now a map setting, instead of startup setting. If you are using non-default setting, please load your game and change those 2 settings in "map setting" tab

---------------------------------------------------------------------------------------------------
Version: 1.12.1
Date: 2022-01-22

  Changes:
    - set_autonomous() when the ERM group finish its command.

  Bugfixes:
    - Fixed a crash in ermGroupCacheTableCleanup function again. XD


---------------------------------------------------------------------------------------------------
Version: 1.12.0
Date: 2022-01-15

  Features:
    - Native support for Free for All.  You can enable in startup setting. (BETA)
    - When FFA mode is enabled:
    - Player entity health multiplied by 8x
    - Enemy damage also multiplied by 8x.
    - The multiplier is to balance the time enemy units take to kill each other.

  Changes:
    - Certain surfaces will no longer assign races. E.g aai-signals, starmap from SE. (Inspired from Rampant 2.0)
    - When attack group can't find attack path, it will automatically destroy and refund some attack points.
    - Raise pick spawn / attack group location retries from 4 to 12.
    - All default weapon can now hit air. Removed Allow ground weapons to hit air units setting
    - Biters now have resistance similar to other races. Max 90 for elemental and 95 for physical
    - Biter spawners now use same spawn cooldown as zerg, {600, 300} ticks.