@@ -67,7 +67,7 @@ if DEBUG_MODE then
     ErmConfig.CONFIG_CACHE_SIZE = 8
 end
 
-ErmConfig.FFA_MULTIPLIER = 8
+ErmConfig.FFA_MULTIPLIER = 10
 
 local refreshable_settings = {
     startup = {
