@@ -59,16 +59,21 @@ if settings.startup['enemyracemanager-enhance-defense'].value == true then
     data.raw['electric-turret']['laser-turret']['max_health'] = 1200
 
     -- Buff vehicles
-    data.raw['car']['car']['max_health'] = 750
-    data.raw['car']['car']['resistances'] = vehicle_change_resistance(50, 0)
-    data.raw['car']['tank']['resistances'] = vehicle_change_resistance(75, 20)
-    data.raw['spider-vehicle']['spidertron']['resistances'] = vehicle_change_resistance(75, 5)
+    data.raw['car']['car']['max_health'] = data.raw['car']['car']['max_health'] * 3
+    data.raw['car']['car']['resistances'] = vehicle_change_resistance(75, 5)
+    data.raw['car']['tank']['max_health'] = data.raw['car']['tank']['max_health'] * 2
+    data.raw['car']['tank']['resistances'] = vehicle_change_resistance(75, 25)
+    data.raw['spider-vehicle']['spidertron']['resistances'] = vehicle_change_resistance(75, 15)
 
     -- Buff vehicle gun
-    data.raw['gun']['vehicle-machine-gun']['attack_parameters']['damage_modifier'] = 1.5
+    data.raw['gun']['vehicle-machine-gun']['attack_parameters']['damage_modifier'] = 2
     data.raw['gun']['tank-machine-gun']['attack_parameters']['damage_modifier'] = 2
     data.raw['gun']['tank-flamethrower']['attack_parameters']['damage_modifier'] = 2
     data.raw['gun']['tank-cannon']['attack_parameters']['damage_modifier'] = 2
+    data.raw['gun']['spidertron-rocket-launcher-1']['attack_parameters']['damage_modifier'] = 2
+    data.raw['gun']['spidertron-rocket-launcher-2']['attack_parameters']['damage_modifier'] = 2
+    data.raw['gun']['spidertron-rocket-launcher-3']['attack_parameters']['damage_modifier'] = 2
+    data.raw['gun']['spidertron-rocket-launcher-4']['attack_parameters']['damage_modifier'] = 2
 
     -- Buff train
     data.raw['locomotive']['locomotive']['resistances'] = vehicle_change_resistance(75, 15)
